Update prediction display in index.html and refactor restrq.js

--- a/client/index.html
+++ b/client/index.html
@@ -90,7 +90,7 @@
 
       </a>
       <p id="prediction">Prediction will be displayed here.</p>
-      <div id="result">22068307.12 kW-h</div>
+      <div id="result">{{ prediction }} kW-h</div>
       <script src="webpage/js/restrq.js"></script>
 
 
