Update index.html and app.py, remove rf.joblib, and update requirements.txt

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
     <div class="form-card">
       <h1>Energy Usage Forcasting</h1>
       <p>Enter the following information to predict the weather:</p>
-      <form action="/" method="post" id="hyperparameters">
+      <form method="post" id="hyperparameters">
         <input type="date" name="READING_START_DATE" placeholder="Date" />
         <div class="radio-buttons">
           <input type="radio" id="IN" name="ADID" value="IN" />
