Update Dockerfile and app.py, functional connection :)

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
     <div class="form-card">
       <h1>Energy Usage Forcasting</h1>
       <p>Enter the following information to predict the weather:</p>
-      <form method="post" id="hyperparameters" action="/handle_data">
+      <form method="POST" id="hyperparameters" action="http://localhost:5000/handle_data">
         <input type="date" name="READING_START_DATE" placeholder="Date" />
         <div class="radio-buttons">
           <input type="radio" id="IN" name="ADID" value="IN" />
