Fix navigation links and update bulk upload form

--- a/client/bulk.html
+++ b/client/bulk.html
@@ -72,12 +72,12 @@
   </div>
   <div class="navbar">
     <a href="index.html">Home</a>
-    <a href="bulk.html">Bulk Upload</a>
+    <a href="bulk.html">|          Bulk Upload</a>
   </div>
 
 
   <div class="form-card">
-    <h1>Bulk Energy Usage Forcas ting</h1>
+    <h1>Bulk Energy Usage Forcasting</h1>
     <p>Use this form to select the type of prediction that is being made then enter the dates for which you want a
       prediction to be generated.</p>
     <p>Using this option with send a call to the NOAA API to retrive relevant forecast or recorded temperature data.
@@ -119,13 +119,11 @@
           for="industrial">Industrial</label>
         <input type="radio" id="commercial" name="type" value=""> <label
           for="commercial">Commercial</label></span>
-      <input type="email" id="email" name="email" placeholder="Enter the Recipient Email Address">
       <input type="submit" value="Upload">
     </form>
   </div>
   <div class="resp-card">
-    <p id="prediction">Bulk Prediction Results will be displayed here in some time. Results will be emailed to <span
-        id="emailPlaceholder"></span></p>
+    <p id="prediction">YOU'LL BE REDIRECTED SHORTLY AFTER PRESSING UPLOAD TO THE RESULT PAGE</p>
     <div id="result"></div>
     <script src="webpage/js/restrq.js"></script>
 </body>
