--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
     </div>
       <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="bulk.html">Bulk Upload</a>
+        <a href="bulk.html">|           Bulk Upload</a>
       </div>
 
     <div class="form-card">
