Refactor code to append table to 'results' container

--- a/client/python/results.html
+++ b/client/python/results.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <title>SE Michigan Weather Prediction</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="dtestyle.css" />
-  <script src="js/scripting.js"></script>
+  <link rel="stylesheet" href="../dtestyle.css" />
+  <script src="../js/scripting.js"></script>
 
 </head>
 
@@ -28,7 +28,9 @@
 
   <div class="form-card">
     <h1>Energy Usage Forcasting Results from CSV Submission</h1>
-    
+    <div id="results">
+
+    </div>
     </form>
 
   </div>
