Update image file paths in results.html

--- a/client/python/results.html
+++ b/client/python/results.html
@@ -51,28 +51,28 @@
     <div class="form-card">
       <h1>Energy Usage Forcasting Results from CSV Submission</h1>
       <div>
-        <a href="predictions.csv" download>
+        <a href="./client/python/temp/predictions.csv" download>
           <button>Download Results Table</button>
         </a>
       </div>
       <div class="grid-container">
         <div class="grid-item">
-          <img src="tempEnergy.png" alt="Placeholder Image" />
+          <img src="./client/python/temp/tempEnergy.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="energyTemp.png" alt="Placeholder Image" />
+          <img src="./client/python/temp/energyTemp.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="avgEnergyHoliday.png" alt="Placeholder Image" />
+          <img src="./client/python/temp/avgEnergyHoliday.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="holidayDepression.png" alt="Placeholder Image" />
+          <img src="./client/python/temp/holidayDepression.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="tempBinsConsumption.png" alt="Placeholder Image" />
+          <img src="./client/python/temp/tempBinsConsumption.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="windSpdEnergy.png" alt="Placeholder Image" />
+          <img src="./client/python/temp/windSpdEnergy.png" alt="Placeholder Image" />
         </div>
       </div>
       <a href="../bulk.html" download>
