Update navigation links in HTML files

--- a/client/python/results.html
+++ b/client/python/results.html
@@ -44,8 +44,8 @@
       </div>
     </div>
     <div class="navbar">
-      <a href="index.html">Home</a>
-      <a href="bulk.html">| Bulk Upload</a>
+      <a href="/client/index.html">Single Prediction</a>
+      <a href="/client/bulk.html">| Bulk Upload Predictions</a>
     </div>
 
     <div class="form-card">
