--- a/client/bulk.html
+++ b/client/bulk.html
@@ -71,8 +71,8 @@
     </div>
   </div>
   <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="bulk.html">|          Bulk Upload</a>
+    <a href="/client/index.html">Single Prediction</a>
+    <a href="/client/bulk.html">| Bulk Upload Predictions</a>
   </div>
 
 
