Refactor API response in app.py and update image paths in results.html

--- a/client/python/results.html
+++ b/client/python/results.html
@@ -51,31 +51,31 @@
     <div class="form-card">
       <h1>Energy Usage Forcasting Results from CSV Submission</h1>
       <div>
-        <a href="./client/python/temp/predictions.csv" download>
+        <a href="./temp/tempEnergy.png" download>
           <button>Download Results Table</button>
         </a>
       </div>
       <div class="grid-container">
         <div class="grid-item">
-          <img src="./client/python/temp/tempEnergy.png" alt="Placeholder Image" />
+          <img src="./temp/tempEnergy.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="./client/python/temp/energyTemp.png" alt="Placeholder Image" />
+          <img src="./temp/energyTemp.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="./client/python/temp/avgEnergyHoliday.png" alt="Placeholder Image" />
+          <img src="./temp/avgEnergyHoliday.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="./client/python/temp/holidayDepression.png" alt="Placeholder Image" />
+          <img src="./temp/holidayDepression.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="./client/python/temp/tempBinsConsumption.png" alt="Placeholder Image" />
+          <img src="./temp/tempBinsConsumption.png" alt="Placeholder Image" />
         </div>
         <div class="grid-item">
-          <img src="./client/python/temp/windSpdEnergy.png" alt="Placeholder Image" />
+          <img src="./temp/windSpdEnergy.png" alt="Placeholder Image" />
         </div>
       </div>
-      <a href="../bulk.html" download>
+      <a href="../bulk.html">
         <button>Make another prediction</button>
       </a>
     </div>
