Update form action URL and remove unnecessary imports

--- a/client/bulk.html
+++ b/client/bulk.html
@@ -82,7 +82,7 @@
       prediction to be generated.</p>
     <p>Using this option with send a call to the NOAA API to retrive relevant forecast or recorded temperature data.
       Data is from the DTW weather station.</p>
-    <form id="apiForm" action="http://localhost:5000/api" method="POST" enctype="multipart/form-data">
+    <form id="apiForm" action="http://localhost:5000/api" method="POST">
 
       <span><input type="radio" id="industrial" name="type" value="IN"><label
           for="industrial">Industrial</label>
