Update links in HTML files

--- a/client/index.html
+++ b/client/index.html
@@ -27,8 +27,8 @@
       </div>
     </div>
       <div class="navbar">
-        <a href="/client/index.html">Single Prediction</a>
-        <a href="/client/bulk.html">| Bulk Upload Predictions</a>
+        <a href="/index.html">Single Prediction</a>
+        <a href="/bulk.html">| Bulk Upload Predictions</a>
       </div>
 
     <div class="form-card">
