--- a/client/python/results.html
+++ b/client/python/results.html
@@ -48,7 +48,7 @@
       <a href="/client/bulk.html">| Bulk Upload Predictions</a>
     </div>
 
-    <div class="form-card">
+    <div class="form-card" style="width: 80%">
       <h1>Energy Usage Forcasting Results from CSV Submission</h1>
       <div>
         <a href="./temp/tempEnergy.png" download>
