Fix navbar layout and update cache control

--- a/client/bulk.html
+++ b/client/bulk.html
@@ -70,9 +70,9 @@
       </svg>
     </div>
   </div>
-  <div class="navbar">
-    <a href="/index.html">Single Prediction</a>
-    <a href="/bulk.html">| Bulk Upload Predictions</a>
+  <div class="navbar" style="display: flex; justify-content: center;">
+    <a href="/index.html">Single Prediction  |</a>
+    <a href="/bulk.html">  | Bulk Upload Predictions</a>
   </div>
 
 
