--- a/client/python/results.html
+++ b/client/python/results.html
@@ -24,6 +24,10 @@
         object-fit: contain; /* This will make the image scale while maintaining its aspect ratio */
       }
     </style>
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
   </head>
 
   <body>
@@ -43,7 +47,7 @@
         </svg>
       </div>
     </div>
-    <div class="navbar">
+    <div class="navbar" style="display: flex; justify-content: center;">
       <a href="/client/index.html">Single Prediction</a>
       <a href="/client/bulk.html">| Bulk Upload Predictions</a>
     </div>
