--- a/client/index.html
+++ b/client/index.html
@@ -26,7 +26,7 @@
         </svg>
       </div>
     </div>
-      <div class="navbar">
+      <div class="navbar" style="display: flex; justify-content: center;">
         <a href="/index.html">Single Prediction</a>
         <a href="/bulk.html">| Bulk Upload Predictions</a>
       </div>
